edition = "2023";
import "google/protobuf/timestamp.proto";
import "google/protobuf/latlng.proto";


package UMetadata.V1;

// Defines a channel.
message Channel
{
    // The network code - e.g., UU.
    string network = 1;
    // The station name - e..g, CWU.
    string station = 2;
    // The channel name - e.g., HHZ.
    string name = 3;
    // The location code - e.g., 01.  Note, if undefined then this will be "--".
    string location_code = 4;
    // The channel's latitude and longitude in degrees.  This latitude will be in the 
    // range [-90, 90] and the longitude in the rnage [-180, 180).
    google.protobuf.Timestamp latitude_and_longitude = 5;
    // The channel's elevation in meters above sea-level.  This will be in the
    // range [-10,000, 8600] meters.
    double elevation = 6;
    // The nominal sampling rate of the channel in Hz.
    double sampling_rate = 7;
    // The channel's azimuth in degrees measured positive east of north.  This
    // will be in the range [0, 360) where 0 is north and 90 is east.
    double azimuth = 8;
    // The channel's dip in degrees measured positive down from horizontal.
    // This will be in the range of [-90,90] where -90 is positive up.
    double dip = 9;
    // The UTC time when the channel was opened.
    google.protobuf.Timestamp start_time = 10;
    // The UTC time when the channel was closed.
    google.protobuf.Timestamp end_time = 11;
    // The UTC time was this channel's information was updated.
    google.protobuf.Timestamp last_modified = 12;
};


